--- a/2023/05-cooper/references.bib
+++ b/2023/05-cooper/references.bib
@@ -296,7 +296,7 @@
   keywords = {Cause-specific hazard,Competing risks,Elastic net,Lasso,Microarray,Subdistribution hazard},
 }
 
-@article{tay2023featureweightedelastic,
+@article{tay2023featureweighted,
   title = {Feature-{{Weighted Elastic Net}}: {{Using}} "{{Features}} of {{Features}}" for {{Better Prediction}}},
   shorttitle = {Feature-{{Weighted Elastic Net}}},
   author = {Tay, Jingyi Kenneth and Aghaeepour, Nima and Hastie, Trevor and Tibshirani, Robert},
