--- a/2023/09-cooper/references.bib
+++ b/2023/09-cooper/references.bib
@@ -1,355 +1,354 @@
 @article{austin2012generatingsurvival,
-  title = {Generating Survival Times to Simulate {{Cox}} Proportional Hazards Models with Time-Varying Covariates},
-  author = {Austin, Peter C},
-  date = {2012-12-20},
+  author       = {Austin, Peter C},
+  date         = {2012-12-20},
+  doi          = {10.1002/sim.5452},
+  eprint       = {22763916},
+  eprinttype   = {pmid},
+  file         = {/Users/Lukas/Zotero/storage/GX69QPE8/Austin_2012_Generating_survival_times_to_simulate_Cox.pdf},
+  issn         = {0277-6715},
   journaltitle = {Statistics in Medicine},
+  number       = {29},
+  pages        = {3946--3958},
   shortjournal = {Stat Med},
-  volume = {31},
-  number = {29},
-  eprint = {22763916},
-  eprinttype = {pmid},
-  pages = {3946--3958},
-  issn = {0277-6715},
-  doi = {10.1002/sim.5452},
-  urldate = {2022-05-09},
-  pmcid = {PMC3546387},
-  file = {/Users/Lukas/Zotero/storage/GX69QPE8/Austin_2012_Generating_survival_times_to_simulate_Cox.pdf}
+  title        = {Generating Survival Times to Simulate {{Cox}} Proportional Hazards Models with Time-Varying Covariates},
+  urldate      = {2022-05-09},
+  volume       = {31},
 }
 
 @article{bender2005generatingsurvival,
-  title = {Generating Survival Times to Simulate {{Cox}} Proportional Hazards Models},
-  author = {Bender, Ralf and Augustin, Thomas and Blettner, Maria},
-  date = {2005},
+  author       = {Bender, Ralf and Augustin, Thomas and Blettner, Maria},
+  date         = {2005},
+  doi          = {10.1002/sim.2059},
+  file         = {/Users/Lukas/Zotero/storage/BTT3HI8N/Bender_et_al_2005_Generating_survival_times_to_simulate_Cox.pdf;/Users/Lukas/Zotero/storage/A89W5GYF/sim.html},
+  issn         = {1097-0258},
   journaltitle = {Statistics in Medicine},
-  volume = {24},
-  number = {11},
-  pages = {1713--1723},
-  issn = {1097-0258},
-  doi = {10.1002/sim.2059},
-  urldate = {2022-05-09},
-  langid = {english},
-  keywords = {Cox model,exponential distribution,Gompertz distribution,proportional hazards model,simulation,survival times,Weibull distribution},
-  file = {/Users/Lukas/Zotero/storage/BTT3HI8N/Bender_et_al_2005_Generating_survival_times_to_simulate_Cox.pdf;/Users/Lukas/Zotero/storage/A89W5GYF/sim.html}
+  keywords     = {Cox model,exponential distribution,Gompertz distribution,proportional hazards model,simulation,survival times,Weibull distribution},
+  langid       = {english},
+  number       = {11},
+  pages        = {1713--1723},
+  title        = {Generating Survival Times to Simulate {{Cox}} Proportional Hazards Models},
+  urldate      = {2022-05-09},
+  volume       = {24},
 }
 
 @article{binder2008adaptingprediction,
-  title = {Adapting Prediction Error Estimates for Biased Complexity Selection in High-Dimensional Bootstrap Samples},
-  author = {Binder, Harald and Schumacher, Martin},
-  date = {2008},
+  author       = {Binder, Harald and Schumacher, Martin},
+  date         = {2008},
+  doi          = {10.2202/1544-6115.1346},
+  eprint       = {18384265},
+  eprinttype   = {pmid},
+  file         = {/Users/Lukas/Zotero/storage/QBPXWHSP/Binder_Schumacher_2008_Adapting_prediction_error_estimates_for_biased.pdf},
+  issn         = {1544-6115},
   journaltitle = {Statistical Applications in Genetics and Molecular Biology},
+  keywords     = {Algorithms,Humans,Lymphoma; Large B-Cell; Diffuse,Models; Statistical,Oligonucleotide Array Sequence Analysis},
+  langid       = {english},
+  number       = {1},
+  pages        = {Article12},
   shortjournal = {Stat Appl Genet Mol Biol},
-  volume = {7},
-  number = {1},
-  eprint = {18384265},
-  eprinttype = {pmid},
-  pages = {Article12},
-  issn = {1544-6115},
-  doi = {10.2202/1544-6115.1346},
-  langid = {english},
-  keywords = {Algorithms,Humans,Lymphoma; Large B-Cell; Diffuse,Models; Statistical,Oligonucleotide Array Sequence Analysis},
-  file = {/Users/Lukas/Zotero/storage/QBPXWHSP/Binder_Schumacher_2008_Adapting_prediction_error_estimates_for_biased.pdf}
+  title        = {Adapting Prediction Error Estimates for Biased Complexity Selection in High-Dimensional Bootstrap Samples},
+  volume       = {7},
 }
 
 @article{binder2008allowingmandatory,
-  title = {Allowing for Mandatory Covariates in Boosting Estimation of Sparse High-Dimensional Survival Models},
-  author = {Binder, Harald and Schumacher, Martin},
-  date = {2008-01-10},
+  author       = {Binder, Harald and Schumacher, Martin},
+  date         = {2008-01-10},
+  doi          = {10.1186/1471-2105-9-14},
+  file         = {/Users/Lukas/Zotero/storage/WVD2KV6Y/Binder_Schumacher_2008_Allowing_for_mandatory_covariates_in_boosting.pdf;/Users/Lukas/Zotero/storage/BLLTWF7C/1471-2105-9-14.html},
+  issn         = {1471-2105},
   journaltitle = {BMC Bioinformatics},
+  keywords     = {Clinical Covariates,CoxBoost,International Prognostic Index,Mandatory Covariates,Penalty Parameter,Prediction Performance},
+  number       = {1},
+  pages        = {14},
   shortjournal = {BMC Bioinformatics},
-  volume = {9},
-  number = {1},
-  pages = {14},
-  issn = {1471-2105},
-  doi = {10.1186/1471-2105-9-14},
-  urldate = {2023-04-23},
-  keywords = {Clinical Covariates,CoxBoost,International Prognostic Index,Mandatory Covariates,Penalty Parameter,Prediction Performance},
-  file = {/Users/Lukas/Zotero/storage/WVD2KV6Y/Binder_Schumacher_2008_Allowing_for_mandatory_covariates_in_boosting.pdf;/Users/Lukas/Zotero/storage/BLLTWF7C/1471-2105-9-14.html}
+  title        = {Allowing for Mandatory Covariates in Boosting Estimation of Sparse High-Dimensional Survival Models},
+  urldate      = {2023-04-23},
+  volume       = {9},
 }
 
 @article{binder2009boostinghighdimensional,
-  title = {Boosting for High-Dimensional Time-to-Event Data with Competing Risks},
-  author = {Binder, Harald and Allignol, Arthur and Schumacher, Martin and Beyersmann, Jan},
-  date = {2009-04-01},
+  author       = {Binder, Harald and Allignol, Arthur and Schumacher, Martin and Beyersmann, Jan},
+  date         = {2009-04-01},
+  doi          = {10.1093/bioinformatics/btp088},
+  file         = {/Users/Lukas/Zotero/storage/VN72MUFR/Binder_et_al_2009_Boosting_for_high-dimensional_time-to-event_data.pdf;/Users/Lukas/Zotero/storage/94YECZX7/211193.html},
+  issn         = {1367-4803},
   journaltitle = {Bioinformatics},
+  number       = {7},
+  pages        = {890--896},
   shortjournal = {Bioinformatics},
-  volume = {25},
-  number = {7},
-  pages = {890--896},
-  issn = {1367-4803},
-  doi = {10.1093/bioinformatics/btp088},
-  urldate = {2022-05-06},
-  file = {/Users/Lukas/Zotero/storage/VN72MUFR/Binder_et_al_2009_Boosting_for_high-dimensional_time-to-event_data.pdf;/Users/Lukas/Zotero/storage/94YECZX7/211193.html}
+  title        = {Boosting for High-Dimensional Time-to-Event Data with Competing Risks},
+  urldate      = {2022-05-06},
+  volume       = {25},
 }
 
 @article{degenhardt2019evaluationvariable,
-  title = {Evaluation of Variable Selection Methods for Random Forests and Omics Data Sets},
-  author = {Degenhardt, Frauke and Seifert, Stephan and Szymczak, Silke},
-  date = {2019-03-25},
+  author       = {Degenhardt, Frauke and Seifert, Stephan and Szymczak, Silke},
+  date         = {2019-03-25},
+  doi          = {10.1093/bib/bbx124},
+  file         = {/Users/Lukas/Zotero/storage/A7CC5G7C/Degenhardt_et_al_2019_Evaluation_of_variable_selection_methods_for.pdf;/Users/Lukas/Zotero/storage/LR26P2HL/4554516.html},
+  issn         = {1477-4054},
   journaltitle = {Briefings in Bioinformatics},
+  number       = {2},
+  pages        = {492--503},
   shortjournal = {Briefings in Bioinformatics},
-  volume = {20},
-  number = {2},
-  pages = {492--503},
-  issn = {1477-4054},
-  doi = {10.1093/bib/bbx124},
-  urldate = {2022-11-15},
-  file = {/Users/Lukas/Zotero/storage/A7CC5G7C/Degenhardt_et_al_2019_Evaluation_of_variable_selection_methods_for.pdf;/Users/Lukas/Zotero/storage/LR26P2HL/4554516.html}
+  title        = {Evaluation of Variable Selection Methods for Random Forests and Omics Data Sets},
+  urldate      = {2022-11-15},
+  volume       = {20},
 }
 
 @article{dyrskjot2005molecularsignature,
-  title = {A Molecular Signature in Superficial Bladder Carcinoma Predicts Clinical Outcome},
-  author = {Dyrskjøt, Lars and Zieger, Karsten and Kruhøffer, Mogens and Thykjaer, Thomas and Jensen, Jens L. and Primdahl, Hanne and Aziz, Natasha and Marcussen, Niels and Møller, Klaus and Orntoft, Torben F.},
-  date = {2005-06-01},
+  author       = {Dyrskjøt, Lars and Zieger, Karsten and Kruhøffer, Mogens and Thykjaer, Thomas and Jensen, Jens L. and Primdahl, Hanne and Aziz, Natasha and Marcussen, Niels and Møller, Klaus and Orntoft, Torben F.},
+  date         = {2005-06-01},
+  doi          = {10.1158/1078-0432.CCR-04-2095},
+  eprint       = {15930337},
+  eprinttype   = {pmid},
+  file         = {/Users/Lukas/Zotero/storage/D7VS6ECX/Dyrskjot_et_al_2005_A_molecular_signature_in_superficial_bladder.pdf},
+  issn         = {1078-0432},
   journaltitle = {Clinical Cancer Research: An Official Journal of the American Association for Cancer Research},
+  keywords     = {Cluster Analysis,Disease Progression,Expressed Sequence Tags,Gene Expression Profiling,Gene Expression Regulation; Neoplastic,Genome; Human,Humans,Neoplasm Invasiveness,Neoplasm Staging,Oligonucleotide Array Sequence Analysis,Prognosis,Urinary Bladder Neoplasms},
+  langid       = {english},
+  number       = {11},
+  pages        = {4029--4036},
   shortjournal = {Clin Cancer Res},
-  volume = {11},
-  number = {11},
-  eprint = {15930337},
-  eprinttype = {pmid},
-  pages = {4029--4036},
-  issn = {1078-0432},
-  doi = {10.1158/1078-0432.CCR-04-2095},
-  langid = {english},
-  keywords = {Cluster Analysis,Disease Progression,Expressed Sequence Tags,Gene Expression Profiling,Gene Expression Regulation; Neoplastic,Genome; Human,Humans,Neoplasm Invasiveness,Neoplasm Staging,Oligonucleotide Array Sequence Analysis,Prognosis,Urinary Bladder Neoplasms},
-  file = {/Users/Lukas/Zotero/storage/D7VS6ECX/Dyrskjot_et_al_2005_A_molecular_signature_in_superficial_bladder.pdf}
+  title        = {A Molecular Signature in Superficial Bladder Carcinoma Predicts Clinical Outcome},
+  volume       = {11},
 }
 
 @article{gao2022clinicaltimetoevent,
-  title = {Clinical Time-to-Event Prediction Enhanced by Incorporating Compatible Related Outcomes},
-  author = {Gao, Yan and Cui, Yan},
-  date = {2022-05-26},
+  author       = {Gao, Yan and Cui, Yan},
+  publisher    = {Public Library of Science},
+  date         = {2022-05-26},
+  doi          = {10.1371/journal.pdig.0000038},
+  file         = {/Users/Lukas/Zotero/storage/2ZLEU39P/Gao_Cui_2022_Clinical_time-to-event_prediction_enhanced_by.pdf;/Users/Lukas/Zotero/storage/BAIDGIPB/article.html},
+  issn         = {2767-3170},
   journaltitle = {PLOS Digital Health},
+  keywords     = {Angina,Cancers and neoplasms,Deep learning,Disease informatics,Forecasting,Heart failure,Neural networks,Prognosis},
+  langid       = {english},
+  number       = {5},
+  pages        = {e0000038},
   shortjournal = {PLOS Digital Health},
-  volume = {1},
-  number = {5},
-  pages = {e0000038},
-  publisher = {{Public Library of Science}},
-  issn = {2767-3170},
-  doi = {10.1371/journal.pdig.0000038},
-  urldate = {2022-07-06},
-  langid = {english},
-  keywords = {Angina,Cancers and neoplasms,Deep learning,Disease informatics,Forecasting,Heart failure,Neural networks,Prognosis},
-  file = {/Users/Lukas/Zotero/storage/2ZLEU39P/Gao_Cui_2022_Clinical_time-to-event_prediction_enhanced_by.pdf;/Users/Lukas/Zotero/storage/BAIDGIPB/article.html}
+  title        = {Clinical Time-to-Event Prediction Enhanced by Incorporating Compatible Related Outcomes},
+  urldate      = {2022-07-06},
+  volume       = {1},
 }
 
-
 @article{gilhodes2017comparisonvariable,
-  title = {Comparison of Variable Selection Methods for High-Dimensional Survival Data with Competing Events},
-  author = {Gilhodes, Julia and Zemmour, Christophe and Ajana, Soufiane and Martinez, Alejandra and Delord, Jean-Pierre and Leconte, Eve and Boher, Jean-Marie and Filleron, Thomas},
-  date = {2017-12-01},
+  author       = {Gilhodes, Julia and Zemmour, Christophe and Ajana, Soufiane and Martinez, Alejandra and Delord, Jean-Pierre and Leconte, Eve and Boher, Jean-Marie and Filleron, Thomas},
+  date         = {2017-12-01},
+  doi          = {10.1016/j.compbiomed.2017.10.021},
+  file         = {/Users/Lukas/Zotero/storage/EGK53GUC/Gilhodes_et_al_2017_Comparison_of_variable_selection_methods_for.pdf;/Users/Lukas/Zotero/storage/SYBEE7Q2/S0010482517303475.html},
+  issn         = {0010-4825},
   journaltitle = {Computers in Biology and Medicine},
+  keywords     = {Boosting,Competing risks,High-dimensional data,Random survival forest,Stability,Variable selection},
+  langid       = {english},
+  pages        = {159--167},
   shortjournal = {Computers in Biology and Medicine},
-  volume = {91},
-  pages = {159--167},
-  issn = {0010-4825},
-  doi = {10.1016/j.compbiomed.2017.10.021},
-  urldate = {2022-11-15},
-  langid = {english},
-  keywords = {Boosting,Competing risks,High-dimensional data,Random survival forest,Stability,Variable selection},
-  file = {/Users/Lukas/Zotero/storage/EGK53GUC/Gilhodes_et_al_2017_Comparison_of_variable_selection_methods_for.pdf;/Users/Lukas/Zotero/storage/SYBEE7Q2/S0010482517303475.html}
+  title        = {Comparison of Variable Selection Methods for High-Dimensional Survival Data with Competing Events},
+  urldate      = {2022-11-15},
+  volume       = {91},
 }
 
 @article{herrmann2021largescalebenchmarka,
-  title = {Large-Scale Benchmark Study of Survival Prediction Methods Using Multi-Omics Data},
-  author = {Herrmann, Moritz and Probst, Philipp and Hornung, Roman and Jurinovic, Vindi and Boulesteix, Anne-Laure},
-  date = {2021-05-20},
+  author       = {Herrmann, Moritz and Probst, Philipp and Hornung, Roman and Jurinovic, Vindi and Boulesteix, Anne-Laure},
+  date         = {2021-05-20},
+  doi          = {10.1093/bib/bbaa167},
+  file         = {/Users/Lukas/Zotero/storage/Y3UWFXE7/Herrmann et al. - 2021 - Large-scale benchmark study of survival prediction.pdf},
+  issn         = {1467-5463, 1477-4054},
   journaltitle = {Briefings in Bioinformatics},
-  volume = {22},
-  number = {3},
-  pages = {bbaa167},
-  issn = {1467-5463, 1477-4054},
-  doi = {10.1093/bib/bbaa167},
-  urldate = {2022-10-14},
-  langid = {english},
-  file = {/Users/Lukas/Zotero/storage/Y3UWFXE7/Herrmann et al. - 2021 - Large-scale benchmark study of survival prediction.pdf}
+  langid       = {english},
+  number       = {3},
+  pages        = {bbaa167},
+  title        = {Large-Scale Benchmark Study of Survival Prediction Methods Using Multi-Omics Data},
+  urldate      = {2022-10-14},
+  volume       = {22},
 }
 
 @article{ishwaran2008randomsurvivala,
-  title = {Random {{Survival Forests}}},
-  author = {Ishwaran, Hemant and Kogalur, Udaya B. and Blackstone, Eugene H. and Lauer, Michael S.},
-  date = {2008},
+  author       = {Ishwaran, Hemant and Kogalur, Udaya B. and Blackstone, Eugene H. and Lauer, Michael S.},
+  publisher    = {Institute of Mathematical Statistics; https://web.archive.org/web/20211119150646/https://www.jstor.org/stable/30245111},
+  url          = {https://www.jstor.org/stable/30245111},
+  date         = {2008},
+  eprint       = {30245111},
+  eprinttype   = {jstor},
+  file         = {/Users/Lukas/Documents/Zotero/Machine Learning/Trees and Forests/Ishwaran_et_al_2008_Random_Survival_Forests.pdf},
+  issn         = {1932-6157},
   journaltitle = {The Annals of Applied Statistics},
-  volume = {2},
-  number = {3},
-  eprint = {30245111},
-  eprinttype = {jstor},
-  pages = {841--860},
-  publisher = {{Institute of Mathematical Statistics; https://web.archive.org/web/20211119150646/https://www.jstor.org/stable/30245111}},
-  issn = {1932-6157},
-  url = {https://www.jstor.org/stable/30245111},
-  urldate = {2021-11-19},
-  keywords = {archived},
-  file = {/Users/Lukas/Documents/Zotero/Machine Learning/Trees and Forests/Ishwaran_et_al_2008_Random_Survival_Forests.pdf}
+  keywords     = {archived},
+  number       = {3},
+  pages        = {841--860},
+  title        = {Random {{Survival Forests}}},
+  urldate      = {2021-11-19},
+  volume       = {2},
 }
 
 @article{ishwaran2014randomsurvivala,
-  title = {Random Survival Forests for Competing Risks},
-  author = {Ishwaran, Hemant and Gerds, Thomas A. and Kogalur, Udaya B. and Moore, Richard D. and Gange, Stephen J. and Lau, Bryan M.},
-  date = {2014-10-01},
+  author       = {Ishwaran, Hemant and Gerds, Thomas A. and Kogalur, Udaya B. and Moore, Richard D. and Gange, Stephen J. and Lau, Bryan M.},
+  annotation   = {https://web.archive.org/web/20211108105059/https://academic.oup.com/biostatistics/article/15/4/757/266340},
+  date         = {2014-10-01},
+  doi          = {10.1093/biostatistics/kxu010},
+  file         = {/Users/Lukas/Documents/Zotero/Machine Learning/Trees and Forests/Ishwaran_et_al_2014_Random_survival_forests_for_competing_risks.pdf;/Users/Lukas/Zotero/storage/IUWI6DI4/266340.html},
+  issn         = {1465-4644},
   journaltitle = {Biostatistics},
+  keywords     = {archived},
+  number       = {4},
+  pages        = {757--773},
   shortjournal = {Biostatistics},
-  volume = {15},
-  number = {4},
-  pages = {757--773},
-  issn = {1465-4644},
-  doi = {10.1093/biostatistics/kxu010},
-  urldate = {2021-11-08},
-  keywords = {archived},
-  annotation = {https://web.archive.org/web/20211108105059/https://academic.oup.com/biostatistics/article/15/4/757/266340},
-  file = {/Users/Lukas/Documents/Zotero/Machine Learning/Trees and Forests/Ishwaran_et_al_2014_Random_survival_forests_for_competing_risks.pdf;/Users/Lukas/Zotero/storage/IUWI6DI4/266340.html}
+  title        = {Random Survival Forests for Competing Risks},
+  urldate      = {2021-11-08},
+  volume       = {15},
 }
 
 @inproceedings{jacob2009grouplasso,
-  title = {Group Lasso with Overlap and Graph Lasso},
-  booktitle = {Proceedings of the 26th {{Annual International Conference}} on {{Machine Learning}} - {{ICML}} '09},
-  author = {Jacob, Laurent and Obozinski, Guillaume and Vert, Jean-Philippe},
-  date = {2009},
-  pages = {1--8},
-  publisher = {{ACM Press}},
-  location = {{Montreal, Quebec, Canada}},
-  doi = {10.1145/1553374.1553431},
-  urldate = {2022-04-26},
+  author     = {Jacob, Laurent and Obozinski, Guillaume and Vert, Jean-Philippe},
+  location   = {Montreal, Quebec, Canada},
+  publisher  = {ACM Press},
+  booktitle  = {Proceedings of the 26th {{Annual International Conference}} on {{Machine Learning}} - {{ICML}} '09},
+  date       = {2009},
+  doi        = {10.1145/1553374.1553431},
   eventtitle = {The 26th {{Annual International Conference}}},
-  isbn = {978-1-60558-516-1},
-  langid = {english},
-  file = {/Users/Lukas/Zotero/storage/SNMPV3P3/Jacob et al. - 2009 - Group lasso with overlap and graph lasso.pdf}
+  file       = {/Users/Lukas/Zotero/storage/SNMPV3P3/Jacob et al. - 2009 - Group lasso with overlap and graph lasso.pdf},
+  isbn       = {978-1-60558-516-1},
+  langid     = {english},
+  pages      = {1--8},
+  title      = {Group Lasso with Overlap and Graph Lasso},
+  urldate    = {2022-04-26},
 }
 
 @article{janitza2018computationallyfast,
-  title = {A Computationally Fast Variable Importance Test for Random Forests for High-Dimensional Data},
-  author = {Janitza, Silke and Celik, Ender and Boulesteix, Anne-Laure},
-  date = {2018-12-01},
+  author       = {Janitza, Silke and Celik, Ender and Boulesteix, Anne-Laure},
+  date         = {2018-12-01},
+  doi          = {10.1007/s11634-016-0276-4},
+  file         = {/Users/Lukas/Zotero/storage/DKQACKDR/Janitza_et_al_2018_A_computationally_fast_variable_importance_test.pdf},
+  issn         = {1862-5355},
   journaltitle = {Advances in Data Analysis and Classification},
+  keywords     = {62-07,62F07,65C60,Feature selection,Gene selection,Random forests,Variable importance,Variable importance test,Variable selection},
+  langid       = {english},
+  number       = {4},
+  pages        = {885--915},
   shortjournal = {Adv Data Anal Classif},
-  volume = {12},
-  number = {4},
-  pages = {885--915},
-  issn = {1862-5355},
-  doi = {10.1007/s11634-016-0276-4},
-  urldate = {2023-04-21},
-  langid = {english},
-  keywords = {62-07,62F07,65C60,Feature selection,Gene selection,Random forests,Variable importance,Variable importance test,Variable selection},
-  file = {/Users/Lukas/Zotero/storage/DKQACKDR/Janitza_et_al_2018_A_computationally_fast_variable_importance_test.pdf}
+  title        = {A Computationally Fast Variable Importance Test for Random Forests for High-Dimensional Data},
+  urldate      = {2023-04-21},
+  volume       = {12},
 }
 
 @article{klau2018prioritylassosimple,
-  title = {Priority-{{Lasso}}: A Simple Hierarchical Approach to the Prediction of Clinical Outcome Using Multi-Omics Data},
-  shorttitle = {Priority-{{Lasso}}},
-  author = {Klau, Simon and Jurinovic, Vindi and Hornung, Roman and Herold, Tobias and Boulesteix, Anne-Laure},
-  date = {2018-09-12},
+  author       = {Klau, Simon and Jurinovic, Vindi and Hornung, Roman and Herold, Tobias and Boulesteix, Anne-Laure},
+  date         = {2018-09-12},
+  doi          = {10.1186/s12859-018-2344-6},
+  file         = {/Users/Lukas/Zotero/storage/2KBT9FY9/Klau_et_al_2018_Priority-Lasso.pdf;/Users/Lukas/Zotero/storage/LN2R494T/s12859-018-2344-6.html},
+  issn         = {1471-2105},
   journaltitle = {BMC Bioinformatics},
+  keywords     = {Cox regression,Lasso,Multi-omics data,Penalized regression,Prediction model,Priority-lasso},
+  number       = {1},
+  pages        = {322},
   shortjournal = {BMC Bioinformatics},
-  volume = {19},
-  number = {1},
-  pages = {322},
-  issn = {1471-2105},
-  doi = {10.1186/s12859-018-2344-6},
-  urldate = {2023-04-23},
-  keywords = {Cox regression,Lasso,Multi-omics data,Penalized regression,Prediction model,Priority-lasso},
-  file = {/Users/Lukas/Zotero/storage/2KBT9FY9/Klau_et_al_2018_Priority-Lasso.pdf;/Users/Lukas/Zotero/storage/LN2R494T/s12859-018-2344-6.html}
+  shorttitle   = {Priority-{{Lasso}}},
+  title        = {Priority-{{Lasso}}: A Simple Hierarchical Approach to the Prediction of Clinical Outcome Using Multi-Omics Data},
+  urldate      = {2023-04-23},
+  volume       = {19},
 }
 
 @online{saha2019variableselection,
-  title = {Variable {{Selection}} with {{Random Survival Forest}} and {{Bayesian Additive Regression Tree}} for {{Survival Data}}},
-  author = {Saha, Satabdi and Ryu, Duchwan and Ebrahimi, Nader},
-  date = {2019-11-02},
-  eprint = {1910.02160},
-  eprinttype = {arxiv},
+  author      = {Saha, Satabdi and Ryu, Duchwan and Ebrahimi, Nader},
+  url         = {http://arxiv.org/abs/1910.02160},
+  date        = {2019-11-02},
+  eprint      = {1910.02160},
   eprintclass = {stat},
-  url = {http://arxiv.org/abs/1910.02160},
-  urldate = {2022-11-09},
-  pubstate = {preprint},
-  keywords = {Statistics - Applications,Statistics - Machine Learning},
-  file = {/Users/Lukas/Zotero/storage/TESPPQM6/Saha_et_al_2019_Variable_Selection_with_Random_Survival_Forest.pdf;/Users/Lukas/Zotero/storage/G9CHJVFA/1910.html}
+  eprinttype  = {arxiv},
+  file        = {/Users/Lukas/Zotero/storage/TESPPQM6/Saha_et_al_2019_Variable_Selection_with_Random_Survival_Forest.pdf;/Users/Lukas/Zotero/storage/G9CHJVFA/1910.html},
+  keywords    = {Statistics - Applications,Statistics - Machine Learning},
+  pubstate    = {preprint},
+  title       = {Variable {{Selection}} with {{Random Survival Forest}} and {{Bayesian Additive Regression Tree}} for {{Survival Data}}},
+  urldate     = {2022-11-09},
 }
 
 @article{sun2023highdimensionalfeature,
-  title = {High-Dimensional Feature Selection in Competing Risks Modeling: {{A}} Stable Approach Using a Split-and-Merge Ensemble Algorithm},
-  shorttitle = {High-Dimensional Feature Selection in Competing Risks Modeling},
-  author = {Sun, Han and Wang, Xiaofeng},
-  date = {2023},
+  author       = {Sun, Han and Wang, Xiaofeng},
+  date         = {2023},
+  doi          = {10.1002/bimj.202100164},
+  file         = {/Users/Lukas/Zotero/storage/UANHDZZ2/Sun_Wang_2023_High-dimensional_feature_selection_in_competing.pdf;/Users/Lukas/Zotero/storage/DAF7MVWP/bimj.html},
+  issn         = {1521-4036},
   journaltitle = {Biometrical Journal},
-  volume = {65},
-  number = {2},
-  pages = {2100164},
-  issn = {1521-4036},
-  doi = {10.1002/bimj.202100164},
-  urldate = {2023-03-02},
-  langid = {english},
-  keywords = {competing risks,genomic,high dimensional,least squares approximation,variable selection},
-  file = {/Users/Lukas/Zotero/storage/UANHDZZ2/Sun_Wang_2023_High-dimensional_feature_selection_in_competing.pdf;/Users/Lukas/Zotero/storage/DAF7MVWP/bimj.html}
+  keywords     = {competing risks,genomic,high dimensional,least squares approximation,variable selection},
+  langid       = {english},
+  number       = {2},
+  pages        = {2100164},
+  shorttitle   = {High-Dimensional Feature Selection in Competing Risks Modeling},
+  title        = {High-Dimensional Feature Selection in Competing Risks Modeling: {{A}} Stable Approach Using a Split-and-Merge Ensemble Algorithm},
+  urldate      = {2023-03-02},
+  volume       = {65},
 }
 
 @article{tapak2015competingrisks,
-  title = {Competing {{Risks Data Analysis}} with {{High-dimensional Covariates}}: {{An Application}} in {{Bladder Cancer}}},
-  shorttitle = {Competing {{Risks Data Analysis}} with {{High-dimensional Covariates}}},
-  author = {Tapak, Leili and Saidijam, Massoud and Sadeghifar, Majid and Poorolajal, Jalal and Mahjub, Hossein},
-  date = {2015-06-01},
+  author       = {Tapak, Leili and Saidijam, Massoud and Sadeghifar, Majid and Poorolajal, Jalal and Mahjub, Hossein},
+  date         = {2015-06-01},
+  doi          = {10.1016/j.gpb.2015.04.001},
+  file         = {/Users/Lukas/Zotero/storage/H2BWW7AL/Tapak_et_al_2015_Competing_Risks_Data_Analysis_with.pdf;/Users/Lukas/Zotero/storage/3VYB3FWN/S1672022915000406.html},
+  issn         = {1672-0229},
   journaltitle = {Genomics, Proteomics \& Bioinformatics},
+  keywords     = {Cause-specific hazard,Competing risks,Elastic net,Lasso,Microarray,Subdistribution hazard},
+  langid       = {english},
+  number       = {3},
+  pages        = {169--176},
   shortjournal = {Genomics, Proteomics \& Bioinformatics},
-  volume = {13},
-  number = {3},
-  pages = {169--176},
-  issn = {1672-0229},
-  doi = {10.1016/j.gpb.2015.04.001},
-  urldate = {2022-05-06},
-  langid = {english},
-  keywords = {Cause-specific hazard,Competing risks,Elastic net,Lasso,Microarray,Subdistribution hazard},
-  file = {/Users/Lukas/Zotero/storage/H2BWW7AL/Tapak_et_al_2015_Competing_Risks_Data_Analysis_with.pdf;/Users/Lukas/Zotero/storage/3VYB3FWN/S1672022915000406.html}
+  shorttitle   = {Competing {{Risks Data Analysis}} with {{High-dimensional Covariates}}},
+  title        = {Competing {{Risks Data Analysis}} with {{High-dimensional Covariates}}: {{An Application}} in {{Bladder Cancer}}},
+  urldate      = {2022-05-06},
+  volume       = {13},
 }
 
-@article{tay2023featureweightedelastic,
-  title = {Feature-{{Weighted Elastic Net}}: {{Using}} "{{Features}} of {{Features}}" for {{Better Prediction}}},
-  shorttitle = {Feature-{{Weighted Elastic Net}}},
-  author = {Tay, Jingyi Kenneth and Aghaeepour, Nima and Hastie, Trevor and Tibshirani, Robert},
-  date = {2023},
+@article{tay2023featureweighted,
+  author       = {Tay, Jingyi Kenneth and Aghaeepour, Nima and Hastie, Trevor and Tibshirani, Robert},
+  date         = {2023},
+  doi          = {10.5705/ss.202020.0226},
+  file         = {/Users/Lukas/Zotero/storage/A8KZB6F5/Tay_et_al_2023_Feature-Weighted_Elastic_Net.pdf},
+  issn         = {10170405},
   journaltitle = {Statistica Sinica},
+  langid       = {english},
   shortjournal = {STAT SINICA},
-  issn = {10170405},
-  doi = {10.5705/ss.202020.0226},
-  urldate = {2023-04-28},
-  langid = {english},
-  file = {/Users/Lukas/Zotero/storage/A8KZB6F5/Tay_et_al_2023_Feature-Weighted_Elastic_Net.pdf}
+  shorttitle   = {Feature-{{Weighted Elastic Net}}},
+  title        = {Feature-{{Weighted Elastic Net}}: {{Using}} "{{Features}} of {{Features}}" for {{Better Prediction}}},
+  urldate      = {2023-04-28},
 }
 
 @article{vangelovenvalidationprediction,
-  title = {Validation of Prediction Models in the Presence of Competing Risks: A Guide through Modern Methods},
-  author = {family=Geloven, given=Nan, prefix=van, useprefix=true and Giardiello, Daniele and Bonneville, Edouard F and Teece, Lucy and Ramspek, Chava L and family=Smeden, given=Maarten, prefix=van, useprefix=true and Snell, Kym I E and family=Calster, given=Ben, prefix=van, useprefix=true and Pohar-Perme, Maja and Riley, Richard D and Putter, Hein and Steyerberg, Ewout},
-  pages = {7},
+  author = {van Geloven, Nan and Giardiello, Daniele and Bonneville, Edouard F and Teece, Lucy and Ramspek, Chava L and van Smeden, Maarten and Snell, Kym I E and van Calster, Ben and Pohar-Perme, Maja and Riley, Richard D and Putter, Hein and Steyerberg, Ewout},
+  file   = {/Users/Lukas/Zotero/storage/3A39LU3M/van Geloven et al. - Validation of prediction models in the presence of.pdf},
   langid = {english},
-  file = {/Users/Lukas/Zotero/storage/3A39LU3M/van Geloven et al. - Validation of prediction models in the presence of.pdf}
+  pages  = {7},
+  title  = {Validation of Prediction Models in the Presence of Competing Risks: A Guide through Modern Methods},
 }
 
 @article{yuan2006modelselection,
-  title = {Model Selection and Estimation in Regression with Grouped Variables},
-  author = {Yuan, Ming and Lin, Yi},
-  date = {2006},
+  author       = {Yuan, Ming and Lin, Yi},
+  date         = {2006},
+  doi          = {10.1111/j.1467-9868.2005.00532.x},
+  file         = {/Users/Lukas/Zotero/storage/NJV6HXQK/j.1467-9868.2005.00532.html},
+  issn         = {1467-9868},
   journaltitle = {Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
-  volume = {68},
-  number = {1},
-  pages = {49--67},
-  issn = {1467-9868},
-  doi = {10.1111/j.1467-9868.2005.00532.x},
-  urldate = {2023-04-23},
-  langid = {english},
-  keywords = {Analysis of variance,Lasso,Least angle regression,Non-negative garrotte,Piecewise linear solution path},
-  file = {/Users/Lukas/Zotero/storage/NJV6HXQK/j.1467-9868.2005.00532.html}
+  keywords     = {Analysis of variance,Lasso,Least angle regression,Non-negative garrotte,Piecewise linear solution path},
+  langid       = {english},
+  number       = {1},
+  pages        = {49--67},
+  title        = {Model Selection and Estimation in Regression with Grouped Variables},
+  urldate      = {2023-04-23},
+  volume       = {68},
 }
 
 @article{zou2005regularizationvariable,
-  title = {Regularization and {{Variable Selection}} via the {{Elastic Net}}},
-  author = {Zou, Hui and Hastie, Trevor},
-  date = {2005},
+  author       = {Zou, Hui and Hastie, Trevor},
+  publisher    = {[Royal Statistical Society, Wiley]; https://web.archive.org/web/20220204203338/https://www.jstor.org/stable/3647580},
+  url          = {https://www.jstor.org/stable/3647580},
+  date         = {2005},
+  eprint       = {3647580},
+  eprinttype   = {jstor},
+  file         = {/Users/Lukas/Documents/Zotero/Machine Learning/Zou_Hastie_2005_Regularization_and_Variable_Selection_via_the.pdf},
+  issn         = {1369-7412},
   journaltitle = {Journal of the Royal Statistical Society. Series B (Statistical Methodology)},
-  volume = {67},
-  number = {2},
-  eprint = {3647580},
-  eprinttype = {jstor},
-  pages = {301--320},
-  publisher = {{[Royal Statistical Society, Wiley]; https://web.archive.org/web/20220204203338/https://www.jstor.org/stable/3647580}},
-  issn = {1369-7412},
-  url = {https://www.jstor.org/stable/3647580},
-  urldate = {2022-02-28},
-  keywords = {archived},
-  file = {/Users/Lukas/Documents/Zotero/Machine Learning/Zou_Hastie_2005_Regularization_and_Variable_Selection_via_the.pdf}
+  keywords     = {archived},
+  number       = {2},
+  pages        = {301--320},
+  title        = {Regularization and {{Variable Selection}} via the {{Elastic Net}}},
+  urldate      = {2022-02-28},
+  volume       = {67},
 }
+
