--- a/2023/09-cooper/cooper.qmd
+++ b/2023/09-cooper/cooper.qmd
@@ -7,7 +7,7 @@ subtitle: "«CooPeR»"
 author: 
   - Lukas Burk\inst{1,2,3,4}
   - Andreas Bender\inst{2,4}
-  - Marvin N. Wright\inst{1,4}
+  - Marvin N. Wright\inst{1,3}
 format: 
   beamer:
     template: template.tex
@@ -26,7 +26,6 @@ format:
         - \textsuperscript{4}Munich Center for Machine Learning
     bibliography: references.bib
     cite-method: biblatex
-    keep-md: true
     keep-tex: true
     # nocite: |
     #   @binder2009boostinghighdimensional
@@ -55,7 +54,7 @@ theme_set(
 
 ## Introduction
 
-- High-dimensional survival data with two competing risks $e \in \{1, 2\}$, e.g\
+- Settings with two competing events $e \in \{1, 2\}$, e.g.,\
     (1) Death from bladder cancer\
     (2) Death from other causes
     
@@ -72,28 +71,32 @@ theme_set(
 
 ## Elastic Net
 
-
-Elastic net objective function with negative log-likelihood contribution for observation $i$:
-
-<!-- $$ -->
-<!-- \hat{\beta} = \underset{\beta}{\operatorname{arg min}} \quad \mathrm{NLL}(\beta) + {\color{BIPSBlue}\lambda} \sum_{j=1}^p \left( {\color{BIPSOrange}\alpha} |\beta_j| + \frac{1 - {\color{BIPSOrange}\alpha}}{2} \beta_j^2 \right) -->
-<!-- $$ -->
+Objective function with negative log-likelihood contribution for observation $i$:
 
 $$
-\hat{\beta} = \underset{\beta}{\operatorname{arg min}} \quad \sum_{i=1}^n \ell(y_i, \mathbf{x}_i^\top, \symbf{\beta}) + {\color{BIPSBlue}\lambda} \sum_{j=1}^p \left( {\color{BIPSBlue}\alpha} |\beta_j| + \frac{1 - {\color{BIPSBlue}\alpha}}{2} \beta_j^2 \right)
+\hat{\symbf{\beta}} = \underset{\symbf{\beta}}{\operatorname{arg min}} \quad \sum_{i=1}^n \ell(y_i, \mathbf{x}_i^\top, \symbf{\beta}) + {\color{BIPSBlue}\lambda} \sum_{j=1}^p \left( {\color{BIPSBlue}\alpha} |\beta_j| + \frac{1 - {\color{BIPSBlue}\alpha}}{2} \beta_j^2 \right)
 $$
+
+## Elastic Net
+
+Objective function with negative log-likelihood contribution for observation $i$:
+
+$$
+\hat{\symbf{\beta}} = \underset{\symbf{\beta}}{\operatorname{arg min}} \quad \sum_{i=1}^n \ell(y_i, \mathbf{x}_i^\top, \symbf{\beta}) + \sum_{j=1}^p {\color{BIPSOrange}\lambda_j} \left( \alpha |\beta_j| + \frac{1 - \alpha}{2} \beta_j^2 \right)
+$$
+
 
 ## Feature-Weighted Elastic Net
 
 
-Feature-weighted elastic net [^fwe] extends the objective function:
+Feature-weighted elastic net[^fwe] extends objective function:
 
 <!-- $$ -->
 <!-- \hat{\beta} = \underset{\beta}{\operatorname{arg min}} \quad \mathrm{NLL}(\beta) + {\color{BIPSBlue}\lambda} \sum_{j=1}^p \left( {\color{BIPSOrange}\alpha} |\beta_j| + \frac{1 - {\color{BIPSOrange}\alpha}}{2} \beta_j^2 \right) -->
 <!-- $$ -->
 
 $$
-\hat{\beta} = \underset{\beta}{\operatorname{arg min}} \quad  \sum_{i=1}^n \ell(y_i, \mathbf{x}_i^\top, \symbf{\beta}) + \lambda \sum_{j=1}^p {\color{BIPSBlue}w_j(\theta)}\left( \alpha |\beta_j| + \frac{1 - \alpha}{2} \beta^2_j \right)
+\hat{\symbf{\beta}} = \underset{\symbf{\beta}}{\operatorname{arg min}} \quad  \sum_{i=1}^n \ell(y_i, \mathbf{x}_i^\top, \symbf{\beta}) + \lambda \sum_{j=1}^p {\color{BIPSBlue}w_j(\theta)}\left( \alpha |\beta_j| + \frac{1 - \alpha}{2} \beta^2_j \right)
 $$
 
 . . .
@@ -116,21 +119,22 @@ $$
 
 <!-- - Adjust penalization weights on individual or groups of features -->
 
-\begin{center}
-Assign prior values / groups via matrix $\mathbf{Z} \in \mathbb{R}^{p \times K}$
-\end{center}
+
+Incorporate prior external information with $\mathbf{Z} \in \mathbb{R}^{p \times K}$
+
 
 \vspace{1em}
 
 . . .
 
 ::: columns
-::: {.column width="50%"}
-Example for grouping: $\mathbf{Z} \in \mathbb{R}^{5 \times 2}$
+
+::: {.column width="40%"}
+Grouping: $\mathbf{Z} \in \mathbb{R}^{5 \times 2}$
 
 $$
-\mathbf{Z} = 
-\begin{pmatrix} 
+\mathbf{Z} =
+\begin{pmatrix}
 1 & 0 \\
 1 & 0 \\
 0 & 1 \\
@@ -142,11 +146,11 @@ $$
 
 . . .
 
-::: {.column width="50%"}
-...and individual weighting: $\mathbf{Z} \in \mathbb{R}^{5 \times 1}$
+::: {.column width="40%"}
+Individual weighting: $\mathbf{Z} \in \mathbb{R}^{5 \times 1}$
 $$
-\mathbf{Z} = 
-\begin{pmatrix} 
+\mathbf{Z} =
+\begin{pmatrix}
 1.5 \\
 1 \\
 1.2 \\
@@ -155,7 +159,9 @@ $$
 \end{pmatrix}
 $$
 :::
+
 :::
+
 
 ## Feature-Weighted Elastic Net
 
@@ -164,28 +170,24 @@ $$
 w_j(\theta) = \frac{\sum_{l=1}^p \exp(\mathbf{z}_l^\top \theta)}{p \exp(\mathbf{z}_j^\top \theta)}
 $$
 
-\vspace{1em}
+\vspace{2em}
 
--   $\theta \in \mathbb{R}^{K \times 1}$ selected internally
-
--   $\mathbf{z}_j^\top \theta$: "Importance score"
-
--   Larger value $\Rightarrow$ lower $w_j$
-
--   $\theta = 0 \Rightarrow w_j = 1$
-
+. . .
 
 ::: columns
 ::: {.column width="50%"}
-
+-   $\mathbf{z}_j^\top \theta$: "Importance score"
+-   Larger value $\Rightarrow$ lower $w_j$
 :::
 
+. . .
 
 ::: {.column width="50%"}
-
+-   $\theta \in \mathbb{R}^{K \times 1}$ fit internally
+-   $\theta = 0 \Rightarrow w_j = 1$
+:::
 :::
 
-:::
 
 ## Individual Feature Weighting
 
@@ -195,15 +197,15 @@ $$
 -   $|\beta_j|$ small $\Rightarrow$ stronger penalization for $\hat{\beta}_j$
 
 
-## Application for Multi-Task Learning
+## "Cooperative Penalized Regression" (CooPeR)
+\framesubtitle{Based on multi-task algorithm suggested by Tay et al.}
 
-Tay et al. suggest algorithm given $\mathbf{X}$ and targets $\mathbf{y}_1, \mathbf{y}_2$:
 
 \vspace{1em}
 
 . . .
 
-1.  Set $\symbf{\hat{\beta}}_1^{(0)}, \symbf{\hat{\beta}}_2^{(0)}$ to elastic net solution for $(\mathbf{X}, \mathbf{y}_1), (\mathbf{X}, \mathbf{y}_2)$
+1.  Set $\symbf{\hat{\beta}}_1^{(0)}, \symbf{\hat{\beta}}_2^{(0)}$ to elastic net solution for $(\mathbf{X}, \mathbf{y}_1), (\mathbf{X}, \mathbf{y}_2)$ with $\mathbf{y}_e := (\mathbf{t}_e, \delta_e)$
 
 . . .
 
@@ -217,16 +219,16 @@ Tay et al. suggest algorithm given $\mathbf{X}$ and targets $\mathbf{y}_1, \math
 
   b) Fit $\operatorname{fwelnet}\left(\mathbf{X}, \mathbf{y}_1, \mathbf{Z}_1 = \left|\symbf{\hat{\beta}}_2^{(k+1)}\right|\right)$ to determine $\left|\symbf{\hat{\beta}}_1^{(k+1)}\right|$
 
+<!--
+
 ## Transfer to Competing Risks
-
-
 
 ::: incremental
 -   Adapt previous algorithm to Cox regression: $\mathbf{y}_e \Rightarrow (\mathbf{t}_e, \delta_e)$
 -   Assumption: Shared information between both events
 -   $X_j$ important for cause 1 $\Rightarrow$ relevant for cause 2? \
     $\Rightarrow$ lower $\beta_j$ penalty in cause-specific models
-<!-- -   Multi-task $\simeq$ "Multi-cause" -->
+-   Multi-task $\simeq$ "Multi-cause"
 :::
 
 \vspace{1em}
@@ -237,16 +239,19 @@ Tay et al. suggest algorithm given $\mathbf{X}$ and targets $\mathbf{y}_1, \math
 {\large Dubbed "Cooperative Penalized (Cox) Regression" (\strong{\blue{CooPeR}})}
 \end{center}
 
+-->
+
 ## Simulation Study
 
-::: incremental
-- Simulation setup adapted from from Binder et al.[^binder]
-- Mimics gene expression data with competing risk target
-- n = 400, p = 5000, 4 covariate blocks, 4 informative each
-    <!-- - 250 variables per block, 4 informative each -->
-<!-- - Use $\mathbf{1}\{\hat{\beta}_j \neq 0\}$ as classification decision -->
+- Simulation adapted from Binder et al.[^binder]
+- Mimics gene expression data
 - Comparison with CoxBoost[^cb], Random Survival Forests [^rsf]
-:::
+
+. . .
+
+- n = 400, p = 5000, 
+- 4 covariate blocks
+- 4 informative variables each
 
 [^binder]: @binder2009boostinghighdimensional
 [^rsf]: @ishwaran2014randomsurvivala
@@ -254,18 +259,14 @@ Tay et al. suggest algorithm given $\mathbf{X}$ and targets $\mathbf{y}_1, \math
 
 ## Assignment of True Effects
 
-::: incremental
 - Block 1 (**Mutual**): Same effect on both cause-specific hazards
-- Block 2 (**Reversed**): Positive cause 1, negative on cause 2
-- Block 3 (**Disjoint**):
-    - 3.1: effect on cause 1 only
-    - 3.2: effect on cause 2 only
-:::
+- Block 2 (**Reversed**): Cause 1 (+) Cause 2 (-)
+- Block 3 (**Disjoint**): Cause 1 _or_ 2
 
 . . .
 
-- Block 4 (**Cor. Noise**): 500 variables
-- Remaining variables: Uncorrelated noise
+- Block 4 (**Cor. Noise**)
+- Rest: Uncorrelated noise
 
 
 ## Positive Predictive Value
@@ -275,10 +276,10 @@ Tay et al. suggest algorithm given $\mathbf{X}$ and targets $\mathbf{y}_1, \math
 
 ```{r}
 #| fig-align: "center"
-#| out-height: "70%"
-#| out-width: "85%"
+#| out-width: "100%"
+# out-height: "70%"
 # fig-asp: 1
-knitr::include_graphics("img/cen-selected-ppv-equallambda.pdf")
+knitr::include_graphics("img/cen-selected-ppv-equallambda-cause1.pdf")
 ```
 
 ## False Positive Rate 
@@ -287,11 +288,10 @@ knitr::include_graphics("img/cen-selected-ppv-equallambda.pdf")
 
 
 ```{r}
-#| out-height: "70%"
-#| out-width: "90%"
+#| out-width: "100%"
 #| fig-align: "center"
-# fig-asp: 1
-knitr::include_graphics("img/cen-selected-fpr-equallambda.pdf")
+# out-height: "80%"
+knitr::include_graphics("img/cen-selected-fpr-equallambda-cause1.pdf")
 ```
 
 <!-- ::: footer -->
@@ -301,21 +301,26 @@ knitr::include_graphics("img/cen-selected-fpr-equallambda.pdf")
 
 ## Application on Bladder Cancer Data
 
-::: incremental
 - Clinical & gene expression features [^bladder]
 
-- Procedure:
+. . .
+
+- Proxy to estimate variable selection performance:
     1. Apply algorithms for variable selection
     2. Fit standard cause-specific Cox model using only selected variables
     3. Evaluate prediction performance (Brier(t), AUC(t))
 
+. . .
+
 - Results: 
   - CooPeR-selected variables mostly identical to pen. Cox regression
   - Difference in metrics far from conclusive in either direction
-:::
 
+. . .
+
+- No shared effects? Effects too small?
+  
 [^bladder]: @dyrskjot2005molecularsignature
-
 
 ## Conclusion & Outlook
 
@@ -324,8 +329,8 @@ knitr::include_graphics("img/cen-selected-fpr-equallambda.pdf")
 
 - So far no promising results on real data
 
-- Lack of widely available high-dimensional data with competing risks
+- Lack of readily available high-dimensional data with competing risks
 
-- Generalization for $e > 2$ causes unclear
+- Generalization to $e > 2$ events: Unclear
 :::
 
